--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@
    text-decoration: none;
    color: black;
   }
+  p,
+  h2{
+    margin: 0;
+  }
   li{
     list-style: none;
   }
@@ -67,12 +71,86 @@
     padding: 10px;
     box-sizing: border-box;
     border: 2px solid black;
-    border-radius: 20%;
+    border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
 
   .header__li:nth-child(4):hover{
-    background-color: red;
+    background-color: #9f1a15;
+    color: #ffff;
   }
+  .header-section{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+  }
+  .header-section::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    visibility: hidden;
+  }
+  .header-section._sending::after{
+    opacity: 1;
+    visibility: visible;
+  }
+  .header-section__div{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    width: 500px;
+    box-shadow: 0px 0px 48px rgb(106 108 138 / 8%);
+    padding: 50px 30px 30px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.header-section__h2{
+  color: #9f1a15;
+  font-size: 50px;
+  margin-bottom: 30px;
+}
+.header-section__p{
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.header-section__button{
+  color: #9f1a15;
+  border: 2px solid #9f1a15;
+  width: 100%;
+  border-radius: 20px;
+  background-color: #ffff;
+  height: 45px;
+  font-size: 20px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+.header-section__button:hover{
+  background-color: #9f1a15;
+  color: #ffff;
+}
+.header-section__input{
+  margin-bottom: 20px;
+  width: 100%;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  height: 45px;
+  border-radius: 20px;
+  border: 1px solid #c9c9c9;
+}
+.header-section--closed{
+  display: none;
+}
+.header-section--open{
+  display: block;
+}
+.header-section__input._error{
+  box-shadow: 0 0 15px red;
+}
