--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
   }
   
   body {
+    width: 100%;
     min-height: 100%;
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
@@ -62,7 +63,7 @@
   .header{
     padding: 0 10% 0;
     position: fixed;
-    z-index: 999;
+    z-index: 99;
     width: 100%;
     background-color: rgb(163, 195, 243);
   }
@@ -618,10 +619,22 @@ img.active {
   line-height: 30px;
 }
 .square-animation{
+  /* animation: myAnim 1s ease 0s 1 normal forwards; */
   animation: myAnim 1s ease 0s 1 normal forwards;
 
 }
 @keyframes myAnim {
+	0% {
+		transform: scale(0.5);
+		transform-origin: 50% 0%;
+	}
+
+	100% {
+		transform: scale(1);
+		transform-origin: 50% 0%;
+	}
+}
+/* @keyframes myAnim {
 	0% {
 		transform: scaleX(0.4);
 		transform-origin: 0% 0%;
@@ -630,5 +643,29 @@ img.active {
 	100% {
 		transform: scaleX(1);
 		transform-origin: 0% 0%;
-	}
+	} 
+}*/
+.footer{
+  padding: 0 5% 50px;
 }
+.footer__h2{
+  margin-bottom: 50px;
+  font-size: 50px;
+}
+.footer__ul{
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
