Добавила рекламу для пузыриков

--- a/style.css
+++ b/style.css
@@ -426,9 +426,9 @@ main {
 .header-section__p {
   font-size: 16px;
 }
-br{
+/* br{
   content: "";
-}
+} */
 .header__li:nth-child(3){
   width: 120px;
 }
