--- a/styleMK.css
+++ b/styleMK.css
@@ -51,6 +51,7 @@ margin-top: 100px;
 .MK-section--description{
     padding: 50px 5% 50px;
     background-color: #f4e807;
+    margin-bottom: 0 auto;
 }
 .MK-section__p-description{
     font-size: calc(10px + 20 * (100vw / 1555));
@@ -78,6 +79,33 @@ margin-top: 100px;
 .MK-section__button-description:hover{
     color: #f4e807;
 }
+.MK-section-img{
+    width: 100%;
+    height: 400px;
+}
+.MK-main__h2-photo{
+    margin-bottom: 150px;
+}
+.photo-section{
+    margin: 0 5% 100px;
+}
+.photo-section__h2{
+    font-size: calc(10px + 50 * (100vw / 1555));
+    margin-bottom: 100px;
+}
+.photo-section__div{
+    display: grid;
+    grid-template-columns: 30% 70%;
+    gap: 5%;
+}
+.photo-section__p{
+    font-size: calc(10px + 20 * (100vw / 1555));
+    line-height: calc(10px + 30 * (100vw / 1555));
+}
+.photo-section__img:hover{
+    transform: scale(1.5);
+    cursor: pointer;
+}
 @media(max-width:765px) {
     .MK-section{
         display: flex;
@@ -88,5 +116,33 @@ margin-top: 100px;
     }
     .MK-main{
         margin-top: 50px;
+    }
+    .photo-section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .photo-section__div{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .photo-section__img{
+        margin-bottom: 20px;
+    }
+    .photo-section__photo,
+    .photo-section__photo-div{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .photo-section__h2{
+        margin-bottom: 50px;
+    }
+    .MK-main__h2-photo{
+        margin-bottom: 50px;
     }
   }
