--- a/styleMK.css
+++ b/styleMK.css
@@ -102,10 +102,10 @@ margin-top: 100px;
     font-size: calc(10px + 20 * (100vw / 1555));
     line-height: calc(10px + 30 * (100vw / 1555));
 }
-.photo-section__img:hover{
+/* .photo-section__img:hover{
     transform: scale(1.5);
     cursor: pointer;
-}
+} */
 @media(max-width:765px) {
     .MK-section{
         display: flex;
