--- a/styleMK.css
+++ b/styleMK.css
@@ -130,6 +130,29 @@ margin-top: 100px;
     justify-content: center;
     align-items: center;
 }
+.fev{
+    background-color: rgb(227 160 189);
+}
+.MK-main__h214{
+    color: #a51838;
+    text-align: center;
+    font-size: calc(20px + 50 * (100vw / 1555));
+    line-height: calc(20px + 50 * (100vw / 1555));
+}
+.MK-section-img14{
+    width: 100%;
+    height: 500px;
+}
+.MK-section--description14{
+    background-color: #a51838;
+    padding: 20px 5% 20px;
+}
+.MK-section__span-description14{
+    color: antiquewhite;
+    font-size: calc(15px + 20 * (100vw / 1555));
+    margin-bottom: 10px;
+}
+
 @media(max-width:765px) {
     .MK-section{
         display: flex;
@@ -171,5 +194,11 @@ margin-top: 100px;
     }
     .MK-main__h2-photo{
         margin-bottom: 50px;
+    }
+    .MK-section__button-description14{
+        margin-top: 10px;
+    }
+    .MK-section__span-description14{
+        font-size: 15px;
     }
   }
